--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools >= 61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "forecasting-app-fashhtml"
 version = "0.1.0"
@@ -8,3 +12,50 @@ dependencies = [
     "pre-commit>=3.8.0",
     "python-fasthtml>=0.6.4",
 ]
+
+[tool.coverage]
+branch = true
+source = ["predictaweb"]
+
+[tool.coverage.run]
+omit = [
+    "tests/*",
+]
+
+[tool.coverage.report]
+fail_under = 80
+show_missing = true
+
+[tool.mypy]
+disable_error_code = ["no-redef"]  # for fasthtml
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
+[tool.ruff]
+fix = true
+line-length = 88
+src = ["predictaweb"]
+
+[tool.ruff.lint.per-file-ignores]
+"predictaweb/app.py" = ["E501"]
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = 20
+
+[tool.ruff.lint]
+select = ["E", "F", "UP", "B", "SIM", "I"]
+ignore = [
+  "F811", # redefined function, this is helpful for fasthtml
+]
+
+[tool.ruff.lint.isort]
+known-local-folder = ["predictaweb"]
+no-lines-before = ["local-folder"]
+
+[tool.setuptools]
+packages = ["predictaweb"]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
